# podstawy_programowania_23-24

./: praca_domowa_1.md  praca_domowa_2.md
gr1/lab1/: l1.cpp  l2.cpp  wyjscie.cpp  z5.cpp  zad11.cpp  zad9.cpp
gr1/lab10/zad10/: CMakeLists.txt  main.cpp
gr1/lab10/zad9/: main.cpp
gr1/lab10/zadanie1/: main.cpp
gr1/lab11/zad6/: main.cpp
gr1/lab11/zad7/: main.cpp
gr1/lab11/zadanie1/: main.cpp
gr1/lab12/: kod.cpp
gr1/lab2/: zad_2-4.cpp  zadanie3.cpp  zd5.cpp  zd7.cpp  zz1.cpp
gr1/lab3/z10/: CMakeLists.txt  main.cpp  mleko.cpp
gr1/lab3/zadanie2/: main.cpp
gr1/lab3/zadanie3/: main.cpp
gr1/lab3/zadanie3_1/: CMakeLists.txt  main.cpp  z2.cpp
gr1/lab3/zadanie_9/: CMakeLists.txt  main.cpp
gr1/lab4/lab_4_zad_1/: CMakeLists.txt  main.cpp
gr1/lab4/zad1/: main.cpp
gr1/lab4/zad2/: main.cpp
gr1/lab4/zad7/: CMakeLists.txt  main.cpp
gr1/lab5/zadanie/: CMakeLists.txt  main.cpp
gr1/lab5/zadanie1/: main.cpp  zadanie7.cpp
gr1/lab5/zadanie2/: CMakeLists.txt  main.cpp
gr1/lab5/zadanie5/: main.cpp
gr1/lab5/zadanie7/: CMakeLists.txt  main.cpp
gr1/lab5/zadanie8/: main.cpp
gr1/lab5/zadanie9/: CMakeLists.txt  main.cpp
gr1/lab6/zad6/: CMakeLists.txt  main.cpp
gr1/lab6/zadanie1/: main.cpp
gr1/lab8/zad1/: main.cpp  (+1 more)
gr2/lab1/: kod.cpp  l1.cpp  z11.cpp  z11b.cpp  z3.cpp  z5.cpp  z8.cpp  zad4.cpp
gr2/lab13/: kod.cpp
gr2/lab14/: kod.cpp
gr2/lab2/: z1.cpp  z3.cpp  zad4.cpp  zad5.cpp  zad7.cpp
gr2/lab5/nowy_projekt1/: CMakeLists.txt  main.cpp
gr2/lab8/nienazwany1/: CMakeLists.txt  main.cpp
gr2/lab9/nienazwany2/: CMakeLists.txt  a.out  main.cpp
(+94 files in other folders)
