cmake_minimum_required(VERSION 3.5)

project(nienazwany2 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(nienazwany2 main.cpp)

include(GNUInstallDirs)
install(TARGETS nienazwany2
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
